--- a/index.html
+++ b/index.html
@@ -1,1 +1,68 @@
-html:5
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Document</title>
+	<link rel="stylesheet" href="style.css">
+</head>
+<body>
+	<form>
+		<div class="container-1">
+			<label for="fname">FIRST NAME</label>
+			<input type="fname" name="fname" placeholder="First Name">
+
+			<label for="lname">LAST NAME</label>
+			<input type="lname'" name="lname" placeholder="Last Name">
+
+			<label for="email">EMAIL ADDRESS</label>
+			<input type="email" name="email" placeholder="Austin.kuehne@gmail.com">
+
+			<label for="country">COUNTRY</label>
+			<select name="country">
+				<option value="country">Choose a country</option>
+			</select>
+				
+			<label for="biography">BIOGRAPHY</label>
+			<textarea id="biography" name="biography"></textarea>
+		</div>
+		<div class="container-2">
+	
+			<label for="phone">PHONE NUMBER</label>
+			<input type="phone" name="phone" placeholder="+351 999 9999">
+			
+			<label for="affiliations">AFFILIATIONS</label>
+			<textarea id="affiliations" name="affiliations"></textarea>
+
+			<label for="occupation">OCCUPATION</label>
+			<select name="occupation">
+				<option value="occupation">Choose an occupation</option>
+			</select>
+
+			<label for="cat">CAT'S NAME</label>
+			<input type="cat" name="cat" placeholder="Kitty">
+
+			<label for="gadget">FAVORITE GADGET</label>
+			<input type="gadget" name="gadget" placeholder="Annoy-a-tron">
+		</div>
+
+		<div class="container-3">
+			<label for="talent">TYPE OF TALENT</label>
+			<select name="talent">
+				<option value="talent">Choose a talent</option>
+			</select>
+
+			<label for="drink">FAVORITE DRINK</label>
+			<input type="drink" name="drink" placeholder="Green Tea">
+
+			<label for="power">SPECIAL POWER</label>
+			<input type="power" name="power" placeholder="Anti-gravity">
+
+			<label for="weapon">WEAPON OF CHOICE</label>
+			<input type="weapon" name="weapon" placeholder="Lightsaber">
+
+			<label for="comments">COMMENTS</label>
+			<textarea id="comments" name="comments"></textarea>
+		</div>
+	</form>
+</body>
+</html>
